--- a/templates/add_subscriber.html
+++ b/templates/add_subscriber.html
@@ -6,6 +6,7 @@
     <label>Email: <input type="email" name="email" required></label><br>
     <label>Tier: <input type="text" name="tier" value="free"></label><br>
     <label>Tags: <input type="text" name="tags" placeholder="comma,separated"></label><br>
+    <label>Phone: <input type="text" name="phone" placeholder="+15555555555"></label><br>
     <button type="submit">Add Subscriber</button>
 </form>
 {% endblock %}
