--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,8 @@
         <nav>
             <a href="/">Dashboard</a> |
             <a href="/subscribers">Subscribers</a> |
-            <a href="/subscriber/add">Add Subscriber</a>
+            <a href="/subscriber/add">Add Subscriber</a> |
+            <a href="/logout">Logout</a>
         </nav>
         <hr>
     </header>
