--- a/templates/subscriber_detail.html
+++ b/templates/subscriber_detail.html
@@ -4,6 +4,7 @@
 <p>Email: {{ sub.email }}</p>
 <p>Tier: {{ sub.tier }}</p>
 <p>Tags: {{ sub.tags or '' }}</p>
+<p>Phone: {{ sub.phone or '' }}</p>
 <p>Joined: {{ sub.joined_at }}</p>
 <p>Last Active: {{ sub.last_active or 'Never' }}</p>
 <h3>Message Log:</h3>
